summary: Descubre las novedades de la gestión de clústeres de ONTAP en las instalaciones de BlueXP. 
---
= Novedades de los clústeres de ONTAP en las instalaciones
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Descubre las novedades de la gestión de clústeres de ONTAP en las instalaciones de BlueXP.



== 30 de julio de 2023



=== Cree volúmenes de FlexGroup

Si estás gestionando un clúster con un conector, ahora puede crear volúmenes de FlexGroup mediante la API de BlueXP.

* https://docs.netapp.com/us-en/bluexp-automation/cm/wf_onprem_flexgroup_ontap_create_vol.html["Conozca cómo crear un volumen de FlexGroup"^]
* https://docs.netapp.com/us-en/ontap/flexgroup/definition-concept.html["Vea qué es un volumen de FlexGroup"^]




== 2 de julio de 2023



=== Detección de clúster desde Mi estado

Ahora puedes detectar los clústeres de ONTAP on-premises desde *Canvas > Mi estado* mediante la selección de un clúster que BlueXP detectó previamente a partir de los clústeres de ONTAP asociados con la dirección de correo electrónico para tu inicio de sesión de BlueXP.

https://docs.netapp.com/us-en/bluexp-ontap-onprem/task-discovering-ontap.html#add-a-pre-discovered-cluster["Aprenda a descubrir clústeres en la página Mi estado"].



== 4 de mayo de 2023



=== Habilita el backup y la recuperación de datos de BlueXP

A partir de ONTAP 9.13.1, puede usar System Manager (vista avanzada) para habilitar el backup y la recuperación de BlueXP si ha detectado el clúster mediante un conector. link:https://docs.netapp.com/us-en/ontap/task_cloud_backup_data_using_cbs.html["Obtén más información sobre habilitar el backup y la recuperación de datos de BlueXP"^]



=== Actualizar la imagen de la versión de ONTAP y el firmware del hardware
