@@ -44,10 +44,6 @@ Busque en la base de conocimientos de BlueXP para encontrar artículos útiles p
 +
 Únase a la comunidad de BlueXP para seguir los debates en curso o crear otros nuevos.
 
-* Correo:ng-cloudmanager-feedback@netapp.com[correo electrónico de comentarios]
-+
-Apreciamos sus opiniones. Envíe sus comentarios para ayudarnos a mejorar BlueXP.
-
 
 
 
